[package]
name = "evan-sphereJournalBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9"
dotenv = "0.15"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
http = "1.3.1"
